--- a/makefile.icc
+++ b/makefile.icc
@@ -1,24 +1,29 @@
 # Makefile for Independent JPEG Group's software
 
-# This makefile is for Microsoft C for MS-DOS, version 5.x.
+# This makefile is for Intel's Code Builder 32-bit DOS/Windows compiler.
+# Thanks to Bailey Brown.
 
 # Read SETUP instructions before saying "make" !!
 
-# Microsoft's brain-damaged version of make uses nonstandard syntax (a blank
-# line is needed to terminate a command list) and it simply scans the rules
-# in order, rather than doing a true dependency-tree walk.  Furthermore,
-# expanded command lines can't exceed 128 chars (this is a DOS bug, not
-# make's fault); so we can't just name all the objectfiles in the link steps.
-# Instead we shove each objectfile into a library as it is made, and link
-# from the library.  The objectfiles are also kept separately as timestamps.
+# The name of your C compiler:
+CC= icc
 
-# You may need to adjust these cc options:
-CFLAGS=  /AS /I. /W3 /Oail /Gs   # NB: /Gs turns off stack oflo checks
-LDFLAGS= /Fm /F 2000             # /F hhhh  sets stack size (in hex)
-# In particular:
-#   Add /DMSDOS if your compiler doesn't automatically #define MSDOS.
-#   Add /DMEM_STATS to enable gathering of memory usage statistics.
-# You might also want to add /G2 if you have an 80286, etc.
+# You may want to adjust these cc options:
+CFLAGS= /O3 /Ll /DTWO_FILE_COMMANDLINE
+
+# Link-time cc options:
+LDFLAGS= /F /xregion=4M
+# /F removes floating-point support, which we don't need.
+# /xregionsize sets virtual memory region size.
+
+# To link any special libraries, add the necessary -l commands here.
+LDLIBS= 
+
+# miscellaneous OS-dependent stuff
+# linker
+LN= $(CC)
+# library (.lib) file creation command
+AR= lib32
 
 
 # source files (independently compilable files)
@@ -46,7 +51,7 @@ TESTFILES= testorig.jpg testimg.ppm testimg.gif testimg.jpg
 DISTFILES= $(DOCS) $(MAKEFILES) $(SOURCES) $(SYSDEPFILES) $(INCLUDES) \
         $(OTHERFILES) $(TESTFILES)
 # objectfiles common to cjpeg and djpeg
-COMOBJECTS= jutils.obj jerror.obj jmemmgr.obj jmemsys.obj jmemdosa.obj
+COMOBJECTS= jutils.obj jerror.obj jmemmgr.obj jmemsys.obj
 # compression objectfiles
 CLIBOBJECTS= jcmaster.obj jcdeflts.obj jcarith.obj jccolor.obj jcexpand.obj \
         jchuff.obj jcmcu.obj jcpipe.obj jcsample.obj jfwddct.obj \
@@ -62,101 +67,75 @@ DOBJECTS= jdmain.obj $(DLIBOBJECTS) $(COMOBJECTS)
 LIBOBJECTS= $(CLIBOBJECTS) $(DLIBOBJECTS) $(COMOBJECTS)
 
 
-# inference rule used for all compilations except jcmain.c, jdmain.c
-# notice that objectfile is also inserted into libjpeg.lib
-.c.obj:
-	cl $(CFLAGS) /c $*.c
-	lib libjpeg -+$*.obj;
-
-# inference rule for assembly code
-.asm.obj:
-	masm /mx $*;
-	lib libjpeg -+$*.obj;
-
-
-jbsmooth.obj : jbsmooth.c jinclude.h jconfig.h jpegdata.h
-
-jcarith.obj : jcarith.c jinclude.h jconfig.h jpegdata.h
-
-jccolor.obj : jccolor.c jinclude.h jconfig.h jpegdata.h
-
-jcdeflts.obj : jcdeflts.c jinclude.h jconfig.h jpegdata.h
-
-jcexpand.obj : jcexpand.c jinclude.h jconfig.h jpegdata.h
-
-jchuff.obj : jchuff.c jinclude.h jconfig.h jpegdata.h
-
-jcmain.obj : jcmain.c jinclude.h jconfig.h jpegdata.h jversion.h
-	cl $(CFLAGS) /c $*.c
-
-jcmaster.obj : jcmaster.c jinclude.h jconfig.h jpegdata.h
-
-jcmcu.obj : jcmcu.c jinclude.h jconfig.h jpegdata.h
-
-jcpipe.obj : jcpipe.c jinclude.h jconfig.h jpegdata.h
-
-jcsample.obj : jcsample.c jinclude.h jconfig.h jpegdata.h
-
-jdarith.obj : jdarith.c jinclude.h jconfig.h jpegdata.h
-
-jdcolor.obj : jdcolor.c jinclude.h jconfig.h jpegdata.h
-
-jddeflts.obj : jddeflts.c jinclude.h jconfig.h jpegdata.h
-
-jdhuff.obj : jdhuff.c jinclude.h jconfig.h jpegdata.h
-
-jdmain.obj : jdmain.c jinclude.h jconfig.h jpegdata.h jversion.h
-	cl $(CFLAGS) /c $*.c
-
-jdmaster.obj : jdmaster.c jinclude.h jconfig.h jpegdata.h
-
-jdmcu.obj : jdmcu.c jinclude.h jconfig.h jpegdata.h
-
-jdpipe.obj : jdpipe.c jinclude.h jconfig.h jpegdata.h
-
-jdsample.obj : jdsample.c jinclude.h jconfig.h jpegdata.h
-
-jerror.obj : jerror.c jinclude.h jconfig.h jpegdata.h
-
-jquant1.obj : jquant1.c jinclude.h jconfig.h jpegdata.h
-
-jquant2.obj : jquant2.c jinclude.h jconfig.h jpegdata.h
-
-jfwddct.obj : jfwddct.c jinclude.h jconfig.h jpegdata.h
-
-jrevdct.obj : jrevdct.c jinclude.h jconfig.h jpegdata.h
-
-jutils.obj : jutils.c jinclude.h jconfig.h jpegdata.h
-
-jmemmgr.obj : jmemmgr.c jinclude.h jconfig.h jpegdata.h jmemsys.h
-
-jrdjfif.obj : jrdjfif.c jinclude.h jconfig.h jpegdata.h
-
-jrdgif.obj : jrdgif.c jinclude.h jconfig.h jpegdata.h
-
-jrdppm.obj : jrdppm.c jinclude.h jconfig.h jpegdata.h
-
-jrdrle.obj : jrdrle.c jinclude.h jconfig.h jpegdata.h
-
-jrdtarga.obj : jrdtarga.c jinclude.h jconfig.h jpegdata.h
-
-jwrjfif.obj : jwrjfif.c jinclude.h jconfig.h jpegdata.h
-
-jwrgif.obj : jwrgif.c jinclude.h jconfig.h jpegdata.h
-
-jwrppm.obj : jwrppm.c jinclude.h jconfig.h jpegdata.h
-
-jwrrle.obj : jwrrle.c jinclude.h jconfig.h jpegdata.h
-
-jwrtarga.obj : jwrtarga.c jinclude.h jconfig.h jpegdata.h
-
-jmemsys.obj : jmemsys.c jinclude.h jconfig.h jpegdata.h jmemsys.h
-
-jmemdosa.obj : jmemdosa.asm
+all: cjpeg.exe djpeg.exe
+# By default, libjpeg.lib is not built unless you explicitly request it.
+# You can add libjpeg.lib to the line above if you want it built by default.
 
 
 cjpeg.exe: $(COBJECTS)
-	cl /Fecjpeg.exe jcmain.obj libjpeg.lib $(LDFLAGS)
+	echo $(COBJECTS) >cjpeg.rsp
+	$(LN) $(LDFLAGS) /ecjpeg.exe @cjpeg.rsp $(LDLIBS)
 
 djpeg.exe: $(DOBJECTS)
-	cl /Fedjpeg.exe jdmain.obj libjpeg.lib $(LDFLAGS)
+	echo $(DOBJECTS) >djpeg.rsp
+	$(LN) $(LDFLAGS) /edjpeg.exe @djpeg.rsp $(LDLIBS)
+
+# libjpeg.lib is useful if you are including the JPEG software in a larger
+# program; you'd include it in your link, rather than the individual modules.
+libjpeg.lib: $(LIBOBJECTS)
+	del libjpeg.lib
+	$(AR) libjpeg.lib  nobackup batch <makljpeg.icc
+
+jmemsys.c:
+	echo You must select a system-dependent jmemsys.c file.
+	echo Please read the SETUP directions.
+	exit 1
+
+test: cjpeg.exe djpeg.exe
+        del testout.*
+	djpeg -outfile testout.ppm  testorig.jpg
+	djpeg -gif -outfile testout.gif  testorig.jpg
+	cjpeg -outfile testout.jpg  testimg.ppm
+        fc /b testimg.ppm testout.ppm
+        fc /b testimg.gif testout.gif
+        fc /b testimg.jpg testout.jpg
+
+
+jbsmooth.obj : jbsmooth.c jinclude.h jconfig.h jpegdata.h
+jcarith.obj : jcarith.c jinclude.h jconfig.h jpegdata.h
+jccolor.obj : jccolor.c jinclude.h jconfig.h jpegdata.h
+jcdeflts.obj : jcdeflts.c jinclude.h jconfig.h jpegdata.h
+jcexpand.obj : jcexpand.c jinclude.h jconfig.h jpegdata.h
+jchuff.obj : jchuff.c jinclude.h jconfig.h jpegdata.h
+jcmain.obj : jcmain.c jinclude.h jconfig.h jpegdata.h jversion.h
+jcmaster.obj : jcmaster.c jinclude.h jconfig.h jpegdata.h
+jcmcu.obj : jcmcu.c jinclude.h jconfig.h jpegdata.h
+jcpipe.obj : jcpipe.c jinclude.h jconfig.h jpegdata.h
+jcsample.obj : jcsample.c jinclude.h jconfig.h jpegdata.h
+jdarith.obj : jdarith.c jinclude.h jconfig.h jpegdata.h
+jdcolor.obj : jdcolor.c jinclude.h jconfig.h jpegdata.h
+jddeflts.obj : jddeflts.c jinclude.h jconfig.h jpegdata.h
+jdhuff.obj : jdhuff.c jinclude.h jconfig.h jpegdata.h
+jdmain.obj : jdmain.c jinclude.h jconfig.h jpegdata.h jversion.h
+jdmaster.obj : jdmaster.c jinclude.h jconfig.h jpegdata.h
+jdmcu.obj : jdmcu.c jinclude.h jconfig.h jpegdata.h
+jdpipe.obj : jdpipe.c jinclude.h jconfig.h jpegdata.h
+jdsample.obj : jdsample.c jinclude.h jconfig.h jpegdata.h
+jerror.obj : jerror.c jinclude.h jconfig.h jpegdata.h
+jquant1.obj : jquant1.c jinclude.h jconfig.h jpegdata.h
+jquant2.obj : jquant2.c jinclude.h jconfig.h jpegdata.h
+jfwddct.obj : jfwddct.c jinclude.h jconfig.h jpegdata.h
+jrevdct.obj : jrevdct.c jinclude.h jconfig.h jpegdata.h
+jutils.obj : jutils.c jinclude.h jconfig.h jpegdata.h
+jmemmgr.obj : jmemmgr.c jinclude.h jconfig.h jpegdata.h jmemsys.h
+jrdjfif.obj : jrdjfif.c jinclude.h jconfig.h jpegdata.h
+jrdgif.obj : jrdgif.c jinclude.h jconfig.h jpegdata.h
+jrdppm.obj : jrdppm.c jinclude.h jconfig.h jpegdata.h
+jrdrle.obj : jrdrle.c jinclude.h jconfig.h jpegdata.h
+jrdtarga.obj : jrdtarga.c jinclude.h jconfig.h jpegdata.h
+jwrjfif.obj : jwrjfif.c jinclude.h jconfig.h jpegdata.h
+jwrgif.obj : jwrgif.c jinclude.h jconfig.h jpegdata.h
+jwrppm.obj : jwrppm.c jinclude.h jconfig.h jpegdata.h
+jwrrle.obj : jwrrle.c jinclude.h jconfig.h jpegdata.h
+jwrtarga.obj : jwrtarga.c jinclude.h jconfig.h jpegdata.h
+jmemsys.obj : jmemsys.c jinclude.h jconfig.h jpegdata.h jmemsys.h
