Imported from http://ftp.icm.edu.pl/pub/unix/graphics/jpeg/jpegsrc.v5a.tar.gz

--- a/jconfig.cfg
+++ b/jconfig.cfg
@@ -1,4 +1,4 @@
-/* jconfig.auto --- source file edited by configure script */
+/* jconfig.cfg --- source file edited by configure script */
 /* see jconfig.doc for explanations */
 
 #undef HAVE_PROTOTYPES
