--- a/makefile.cfg
+++ b/makefile.cfg
@@ -1,6 +1,6 @@
 # Makefile for Independent JPEG Group's software
 
-# makefile.auto is edited by configure to produce a custom Makefile.
+# makefile.cfg is edited by configure to produce a custom Makefile.
 
 # Read installation instructions before saying "make" !!
 
@@ -9,31 +9,31 @@ srcdir = @srcdir@
 VPATH = @srcdir@
 
 # Where to install the programs and man pages.
-prefix = /usr/local
-exec_prefix = $(prefix)
+prefix = @prefix@
+exec_prefix = @exec_prefix@
 bindir = $(exec_prefix)/bin
 libdir = $(exec_prefix)/lib
 includedir = $(prefix)/include
-mandir = $(prefix)/man/man1
 binprefix =
 manprefix =
 manext = 1
+mandir = $(prefix)/man/man$(manext)
 
 # The name of your C compiler:
 CC= @CC@
 
 # You may need to adjust these cc options:
-CFLAGS= -O -I$(srcdir)
+CFLAGS= @CFLAGS@ @CPPFLAGS@ -I$(srcdir)
 # Generally, we recommend defining any configuration symbols in jconfig.h,
 # NOT via -D switches here.
 # However, any special defines for ansi2knr.c may be included here:
 ANSI2KNRFLAGS= @ANSI2KNRFLAGS@
 
 # Link-time cc options:
-LDFLAGS= 
+LDFLAGS= @LDFLAGS@
 
 # To link any special libraries, add the necessary -l commands here.
-LDLIBS= 
+LDLIBS= @LIBS@
 
 # Put here the object file name for the correct system-dependent memory
 # manager file.  For Unix this is usually jmemnobs.o, but you may want
@@ -80,10 +80,10 @@ INCLUDES= jdct.h jerror.h jinclude.h jmemsys.h jmorecfg.h jpegint.h \
 DOCS= README install.doc usage.doc cjpeg.1 djpeg.1 rdjpgcom.1 wrjpgcom.1 \
         example.c libjpeg.doc structure.doc coderules.doc filelist.doc \
         change.log
-MKFILES= configure makefile.auto makefile.ansi makefile.unix makefile.manx \
+MKFILES= configure makefile.cfg makefile.ansi makefile.unix makefile.manx \
         makefile.sas makcjpeg.st makdjpeg.st makljpeg.st makefile.bcc \
         makefile.mc6 makefile.dj makefile.mms makefile.vms makvms.opt
-CONFIGFILES= jconfig.auto jconfig.manx jconfig.sas jconfig.st jconfig.bcc \
+CONFIGFILES= jconfig.cfg jconfig.manx jconfig.sas jconfig.st jconfig.bcc \
         jconfig.mc6 jconfig.dj jconfig.vms
 OTHERFILES= jconfig.doc ckconfig.c ansi2knr.c ansi2knr.1 jmemdosa.asm
 TESTFILES= testorig.jpg testimg.ppm testimg.gif testimg.jpg
@@ -158,7 +158,8 @@ install-lib: libjpeg.a jconfig.h
 	$(INSTALL_DATA) $(srcdir)/jerror.h $(includedir)/jerror.h
 
 clean:
-	$(RM) *.o cjpeg djpeg libjpeg.a rdjpgcom wrjpgcom ansi2knr core testout.*
+	$(RM) *.o cjpeg djpeg libjpeg.a rdjpgcom wrjpgcom ansi2knr
+	$(RM) core testout.* config.log config.status
 
 distribute:
 	$(RM) jpegsrc.tar*
